fix: Update CategoryRepositoryAdapter to use List.toList() for improved readability